[gd_scene load_steps=6 format=3 uid="uid://b0yo0ruw5647o"]

[ext_resource type="Texture2D" uid="uid://dgg4gk2c0cfh8" path="res://Visual/sprites/tabsPatch.png" id="1_wvb4v"]
[ext_resource type="Script" uid="uid://bfchd74urbuq1" path="res://Scripts/window.gd" id="2_2dfu3"]
[ext_resource type="Texture2D" uid="uid://6sk5y7hp1pph" path="res://Visual/sprites/smile.png" id="4_sgb2n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28hdt"]
bg_color = Color(0, 0, 0, 0.38431373)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dfu3"]
bg_color = Color(0.7529412, 0.78039217, 0.78431374, 1)

[node name="Window" type="NinePatchRect"]
offset_top = -8.0
offset_right = 628.0
offset_bottom = 248.0
pivot_offset = Vector2(314.685, 125)
mouse_filter = 1
texture = ExtResource("1_wvb4v")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 20
patch_margin_top = 52
patch_margin_right = 76
patch_margin_bottom = 12
script = ExtResource("2_2dfu3")

[node name="Panel" type="Panel" parent="."]
z_index = -1
y_sort_enabled = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_28hdt")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = -3.0
offset_right = 142.0
offset_bottom = 33.0
theme_override_font_sizes/font_size = 40
text = "Score"

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 52.0
grow_horizontal = 2
flat = true

[node name="Button2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
flat = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 52.0
offset_right = -12.0
offset_bottom = -13.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2dfu3")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(92.045, 32)
layout_mode = 2
texture = ExtResource("4_sgb2n")
stretch_mode = 3

[node name="MainLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "SCORE: A+"
horizontal_alignment = 1

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 40.165)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "ok"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
